--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@prisma/client": "^4.7.0",
     "@types/node": "^18.7.23",
+    "nodemon": "^2.0.20",
     "prisma": "^4.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
